--- a/app.json
+++ b/app.json
@@ -1,32 +1,26 @@
 {
   "expo": {
-    "name": "uikit",
-    "slug": "uikit",
+    "name": "Food-app",
+    "slug": "Food-app",
     "version": "1.0.0",
     "orientation": "portrait",
+    "sdkVersion": "44.0.0",
     "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/splash.png",
-      "resizeMode": "contain",
+      "resizeMode": "cover",
       "backgroundColor": "#ffffff"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
-    "ios": {
-      "supportsTablet": true
-    },
+    "assetBundlePatterns": ["**/*"],
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/icon.png",
         "backgroundColor": "#FFFFFF"
-      }
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
+      },
+      "package": "com.sofien.foodapp"
     }
   }
 }
